# surreal-restapi

./: App.toml  Cargo.toml
src/: api.rs  database.rs  main.rs
src/api/: user.rs
