[package]
name = "surreal-restapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
# surreal = "0.4.1"
surrealdb = "1.0.0-beta.8"
# tracing = "0.1.37"
# tracing-subscriber = "0.3.16"
